Fixed: Bug 31303 - Print content should not be aligned to the middle of the page

--- a/ui/apps/themes/login/print.css
+++ b/ui/apps/themes/login/print.css
@@ -21,7 +21,7 @@ body {
     font-size: 13px;
     line-height: 18px;
     max-width: 21cm;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .note {
